--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 @tailwind utilities;
 
 /* Global styling */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   scroll-behavior: smooth;
